Remove unsupported theme line

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-title: NOROSEC
-theme: jekyll-theme-console
+title: NOROSEC — Forbidden Security & Knowledge
 description: "Forbidden knowledge lab and archive"
 url: "https://norosec.xyz"
